[546547] Class.newInstance() is deprecated (Since java9)
Signed-off-by: Aurélien Mora <ealrann@gmail.com>